--- a/buildspec.yml
+++ b/buildspec.yml
@@ -44,6 +44,9 @@ phases:
 
   post_build:
     commands:
+      - pip3 install -r requirements.txt
+      - python3 -m pytest test_main.py
+    commands:
       - docker push $REPOSITORY_URI:$TAG
       - echo $EKS_CLUSTER_NAME
       - echo $EKS_KUBECTL_ROLE_ARN
